--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.8.2",
     "core-js": "3.8.3",
     "lucide-vue-next": "^0.479.0",
     "vue": "3.2.13"
